--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none; /* Hide scrollbar on webkit browsers */
+}
+
+.scrollbar-none {
+  scrollbar-width: none; /* Hide scrollbar on Firefox */
+}
