--- a/src/src/index.css
+++ b/src/src/index.css
@@ -14,3 +14,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1{
+  font-size: 2em;
+}
+ul{
+  list-style: disc;
+}
+ol{
+  list-style: decimal;
+}
